@@ -1,30 +1,25 @@
 package hr.fer.zemris.java.hw06.shell.commands;
 
-import java.nio.charset.Charset;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-
 import hr.fer.zemris.java.hw06.shell.Environment;
 import hr.fer.zemris.java.hw06.shell.ShellCommand;
 import hr.fer.zemris.java.hw06.shell.ShellStatus;
+
+import java.nio.charset.Charset;
+import java.util.List;
+import java.util.Map;
 
 public class CharsetsShellCommand implements ShellCommand{
 
 	@Override
 	public ShellStatus executeCommand(Environment env, String arguments) {
-		if(arguments.trim().length() > 0) {
+		if(!arguments.trim().isEmpty()) {
 			env.writeln("Nepravilni argumenti za naredbu charsets");
 			return ShellStatus.CONTINUE;
 		}
 		Map<String, Charset> charsets = Charset.availableCharsets();
-		Iterator<Charset> iterator = charsets.values().iterator();
-		while (iterator.hasNext()) {
-			Charset all = (Charset)iterator.next();
-			env.writeln(all.displayName());
-		}
+        for (Charset all : charsets.values()) {
+            env.writeln(all.displayName());
+        }
 		return ShellStatus.CONTINUE;
 	}
 
@@ -35,10 +30,6 @@ public class CharsetsShellCommand implements ShellCommand{
 
 	@Override
 	public List<String> getCommandDescription() {
-		List<String> lista = new ArrayList<>();
-		lista.add("Nema argumenata");
-		lista.add("Lista imena svih podržanih setova znakova za tvoju Java platformu");
-		lista.add("Jedno ime seta se ispisuje po liniji");
-		return Collections.unmodifiableList(lista);
+        return List.of("Nema argumenata", "Lista imena svih podržanih setova znakova za tvoju Java platformu", "Jedno ime seta se ispisuje po liniji");
 	}
 }
