@@ -1,19 +1,17 @@
 package hr.fer.zemris.java.hw06.shell.commands;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-
 import hr.fer.zemris.java.hw06.shell.Environment;
 import hr.fer.zemris.java.hw06.shell.ShellCommand;
 import hr.fer.zemris.java.hw06.shell.ShellStatus;
+
+import java.util.List;
 
 public class ExitShellCommand implements ShellCommand{
 
 	@Override
 	public ShellStatus executeCommand(Environment env, String arguments) {
 		arguments = arguments.trim();
-		if(arguments.length() > 0) {
+		if(!arguments.isEmpty()) {
 			env.writeln("Nepravilni argumenti za naredbu exit");
 			return ShellStatus.CONTINUE;
 		}
@@ -27,9 +25,6 @@ public class ExitShellCommand implements ShellCommand{
 
 	@Override
 	public List<String> getCommandDescription() {
-		List<String> lista = new ArrayList<>();
-		lista.add("Nema argumenata");
-		lista.add("Ljuska završava s radom");
-		return Collections.unmodifiableList(lista);
+        return List.of("Nema argumenata", "Ljuska završava s radom");
 	}
 }
