@@ -1,13 +1,11 @@
 package hr.fer.zemris.java.hw06.shell.commands;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.SortedMap;
-
 import hr.fer.zemris.java.hw06.shell.Environment;
 import hr.fer.zemris.java.hw06.shell.ShellCommand;
 import hr.fer.zemris.java.hw06.shell.ShellStatus;
+
+import java.util.List;
+import java.util.SortedMap;
 
 public class HelpShellCommand implements ShellCommand{
 
@@ -15,7 +13,7 @@ public class HelpShellCommand implements ShellCommand{
 	public ShellStatus executeCommand(Environment env, String arguments) {
 		arguments = arguments.trim();
 		SortedMap<String, ShellCommand> mapa = env.commands();
-		if(arguments.equals("")) {
+		if(arguments.isEmpty()) {
 			env.writeln("Supported commands are:");
 			for(String s : mapa.keySet()) {
 				env.writeln(s);
@@ -48,10 +46,6 @@ public class HelpShellCommand implements ShellCommand{
 
 	@Override
 	public List<String> getCommandDescription() {
-		List<String> lista = new ArrayList<>();
-		lista.add("Uzima 0 ili 1 argument koji je ime naredbe");
-		lista.add("Ako nema argumenata ispisuje na konzolu sve podržane naredbe");
-		lista.add("Ako ima argument onda ispisuje ime i opis dane naredbe ili grešku");
-		return Collections.unmodifiableList(lista);
+        return List.of("Uzima 0 ili 1 argument koji je ime naredbe", "Ako nema argumenata ispisuje na konzolu sve podržane naredbe", "Ako ima argument onda ispisuje ime i opis dane naredbe ili grešku");
 	}
 }
